2000-08-11  Peter Williams  <peterw@helixcode.com>

	* mail-config.c (mail_config_get_news): Change () to (void)
	if a function takes no arguments.
	
	* mail-config.h: Prototype mail_config_get_{sources,news}x

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* mail-config-gui.c (identity_dialog): sdialog, not iddialog

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* mail-config-gui.c (news_edit_clicked): Check nrow, not srow.

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* mail-config-gui.c (service_acceptable): Use camel_object_unref
	instead of gtk_object_unref
	(mail_druid_finish): Use new config accessors
	(mail_config_druid): No need to call config functions
	(news_add_clicked): Increments maxnrow, not maxsrow
	(mail_config_apply_clicked): Use new config accessors
	(mail_config): ditto

	* component-factory.c (create_imap_storage): Use new
	config accessors
	(create_news_storage): ditto

	* mail-config.glade: Set news clist name correctly

	* mail-config.c (config_read): Rename from mail_config_read and
	made private - no one should need to do a read manually.
	(mail_config_set_send_html): New accessor
	(mail_config_add_identity): ditto
	(mail_config_get_sources): ditto
	(mail_config_add_source): ditto
	(mail_config_get_default_news): ditto
	(mail_config_get_news): ditto
	(mail_config_add_news): ditto

	* mail-config.h: Prototype new accessors.  Config struct is now
	in mail-config.c and hidden from the world.

2000-08-11  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (describe_fetch_mail): Use camel_service_get_name
	rather than showing the URL to the user.

2000-08-11  Peter Williams  <peterw@helixcode.com>

	* mail-ops.c (do_refile_messages): Freeze the folders while moving.
	(do_flag_messages): Same.
	
	* mail-threads.c (get_password_clicked): Fix the case when the
	user /doesn't/ use escape to cancel the dialog :-/
	(show_error_clicked): Same.

2000-08-11  Dan Winship  <danw@helixcode.com>
