@@ -1,3 +1,10 @@
+2000-08-11  JP Rosevear  <jpr@helixcode.com>
+
+	* mail-config-gui.c (source_dialog): Allow the window
+	to be growable
+
+	* mail-config.c: use void in empty declarations
+
 2000-08-11  Peter Williams  <peterw@helixcode.com>
 
 	* mail-config.c (mail_config_get_news): Change () to (void)
@@ -7,7 +14,8 @@
 
 2000-08-11  JP Rosevear  <jpr@helixcode.com>
 
-	* mail-config-gui.c (identity_dialog): sdialog, not iddialog
+	* mail-config-gui.c (identity_dialog): iddialog, not sdialog
+	(news_edit_clicked): Kill leftover c-p crud
 
 2000-08-11  JP Rosevear  <jpr@helixcode.com>
 
